// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`textEmphasisColor renders 0 1`] = `
Array [
  .c0 {
  text-emphasis-color: #0;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-color: #0;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-color: #0;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-color: #0;
}

<div
    className="c0"
  />,
]
`;

exports[`textEmphasisColor renders function 1`] = `
Array [
  .c0 {
  text-emphasis-color: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-color: has;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-color: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-color: has;
}

<div
    className="c0"
  />,
]
`;

exports[`textEmphasisColor renders invalid theme path 1`] = `
Array [
  .c0 {
  text-emphasis-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-color: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`textEmphasisColor renders negative number 1`] = `
Array [
  .c0 {
  text-emphasis-color: #-54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-color: #-54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-color: #-42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-color: #-42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textEmphasisColor renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    text-emphasis-color: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-emphasis-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-emphasis-color: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-emphasis-color: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    text-emphasis-color: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-emphasis-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-emphasis-color: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-emphasis-color: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-emphasis-color: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-emphasis-color: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-emphasis-color: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-emphasis-color: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-emphasis-color: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-emphasis-color: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-emphasis-color: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-emphasis-color: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textEmphasisColor renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    text-emphasis-color: July;
  }
}

@media April {
  .c0 {
    text-emphasis-color: August;
  }
}

@media January {
  .c0 {
    text-emphasis-color: September;
  }
}

@media April {
  .c0 {
    text-emphasis-color: November;
  }
}

@media June {
  .c0 {
    text-emphasis-color: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    text-emphasis-color: July;
  }
}

@media April {
  .c0 {
    text-emphasis-color: August;
  }
}

@media January {
  .c0 {
    text-emphasis-color: September;
  }
}

@media April {
  .c0 {
    text-emphasis-color: November;
  }
}

@media June {
  .c0 {
    text-emphasis-color: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-emphasis-color: January;
  }
}

@media April {
  .c0 {
    text-emphasis-color: December;
  }
}

@media January {
  .c0 {
    text-emphasis-color: April;
  }
}

@media April {
  .c0 {
    text-emphasis-color: May;
  }
}

@media June {
  .c0 {
    text-emphasis-color: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-emphasis-color: January;
  }
}

@media April {
  .c0 {
    text-emphasis-color: December;
  }
}

@media January {
  .c0 {
    text-emphasis-color: April;
  }
}

@media April {
  .c0 {
    text-emphasis-color: May;
  }
}

@media June {
  .c0 {
    text-emphasis-color: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textEmphasisColor renders postitive number 1`] = `
Array [
  .c0 {
  text-emphasis-color: #54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-color: #54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-color: #42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-color: #42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textEmphasisColor renders string 1`] = `
Array [
  .c0 {
  text-emphasis-color: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-color: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-color: June;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-color: June;
}

<div
    className="c0"
  />,
]
`;

exports[`textEmphasisColor renders valid theme path 1`] = `
Array [
  .c0 {
  text-emphasis-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
